--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.12",
     "nodemon": "^2.0.20",
-    "sucrase": "^3.29.0"
+    "sucrase": "^3.29.0",
+    "typescript": "^4.9.4"
   }
 }
