--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.12",
     "nodemon": "^2.0.20",
     "sucrase": "^3.29.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
