--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "target": "es2016",                                  
     "module": "commonjs",                               
-    "esModuleInterop": true,                            
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,           
-    "skipLibCheck": true                             
+    "esModuleInterop": true,  
+    "allowJs": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",                             
   }
 }
