--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec sucrase-node src/server.ts"
+    "dev": "nodemon --exec sucrase-node src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "sucrase": "^3.29.0",
+    "ts-jest": "^29.0.3",
     "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@shelf/jest-mongodb": "^4.1.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
   }
 }
