--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "@shelf/jest-mongodb": "^4.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0"
   }
 }
