--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
