feat: add env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 JWT_SECRET=mysecret
+PORT=
+MONGO_ATLAS_URL="mongodb+srv://root:root@atlas-challenge.n3is0xs.mongodb.net/?retryWrites=true&w=majority"
