--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "outDir": "./dist", 
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,                       
+    "emitDecoratorMetadata": true,   
+    "resolveJsonModule": true                    
   }
 }
