feat: add scripts to build and start app

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec sucrase-node src/server.ts",
+    "build": "sucrase src -d dist --transforms typescript,imports",
+    "start": "node dist/server.js",
     "test": "jest"
   },
   "devDependencies": {
